Fix spacing.

--- a/frontend/public/stylesheets/basestyles.css
+++ b/frontend/public/stylesheets/basestyles.css
@@ -14,6 +14,10 @@
   --accent-dark: #622a04;
 }
 
+html {
+  scrollbar-gutter: stable;
+}
+
 /* Reset & base styles */
 * {
   margin: 0;
