--- a/frontend/public/stylesheets/menustyles.css
+++ b/frontend/public/stylesheets/menustyles.css
@@ -4,7 +4,7 @@
   font-size: 0;
   background: none;
   border: none;
-  margin-left: 20px;
+  /* margin-left: 20px; */
   filter: drop-shadow(0 0 5px rgba(0, 0, 0, 0.5));
   &::before {
     content: url("data:image/svg+xml, %3Csvg%20xmlns=%27http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%27%20viewBox=%270%200%2024.8%2018.92%27%20width=%2724.8%27%20height=%2718.92%27%3E%3Cpath%20d=%27M23.8,9.46H1m22.8,8.46H1M23.8,1H1%27%20fill=%27none%27%20stroke=%27%23fff%27%20stroke-linecap=%27round%27%20stroke-width=%272%27%2F%3E%3C%2Fsvg%3E");
@@ -37,10 +37,19 @@ body {
   display: none !important;
 }
 
+label {
+  padding: 4px;
+  border: 1px solid transparent;
+}
+
 input:checked + label {
   background-color: light-dark(var(--accent-light), var(--accent-dark));
-  padding: 2px;
   border-radius: 4px;
+}
+
+label:hover {
+  cursor: pointer;
+  border: 1px solid light-dark(var(--primary-light), var(--primary-dark));
 }
 
 .menu-container:has(input[value="All"]:checked) .menu-item {
@@ -92,7 +101,17 @@ button.active {
   grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
   gap: 15px;
   width: 100%;
-  max-width: 1200px;
+}
+
+@media (max-width: 1200px) {
+  .menu-grid {
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+  }
+}
+@media (max-width: 768px) {
+  .menu-grid {
+    grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+  }
 }
 
 /* Menu Item Card */
@@ -133,16 +152,4 @@ button.active {
 
 span {
   font-size: 0.9rem;
-}
-
-/* Responsive Adjustments */
-@media (max-width: 768px) {
-  .filter-container {
-    flex-wrap: wrap;
-    justify-content: center;
-  }
-
-  .menu-grid {
-    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-  }
 }
