--- a/frontend/public/stylesheets/navstyles.css
+++ b/frontend/public/stylesheets/navstyles.css
@@ -1,15 +1,12 @@
 .list {
   list-style-type: none;
-  /* margin-left: auto; */
   display: flex;
-  /* gap: 10%; */
+
   justify-content: space-evenly;
   width: 100%;
   z-index: 5;
   font-size: 2rem;
-  /* @media (min-width: 640px) {
-    display: flex;
-  } */
+
   margin: 10px 0;
 }
 
@@ -19,12 +16,12 @@
 
 nav {
   width: 100%;
+  margin: 10px 0;
 }
 
 nav ul li a {
   text-decoration: none;
   color: light-dark(var(--primary-light), var(--primary-dark));
-  /* color: var(--bg-light); */
 }
 nav ul li a:hover {
   text-decoration: underline;
